2006-05-03  Complication     * Allow a single build attempt to proceed despite 1-minute overload       only if the 1-second rate shows enough spare bandwidth       (e.g. overload has already eased)
Monotone-Parent: 06f2dc3c0fc97918135f4395e8501fdd6af232a9
Monotone-Revision: 0cba6aae5ab5ad744a06149b38df33cc7962ad39

Monotone-Author: complication
Monotone-Date: 2006-05-03T11:13:26
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,9 @@
-$Id: history.txt,v 1.466 2006/05/01 17:42:24 jrandom Exp $
+$Id: history.txt,v 1.467 2006/05/02 23:30:28 complication Exp $
+
+2006-05-03  Complication
+    * Allow a single build attempt to proceed despite 1-minute overload
+      only if the 1-second rate shows enough spare bandwidth
+      (e.g. overload has already eased)
 
 2006-05-02  Complication
     * Correct a misnamed property in SummaryHelper.java
