2006-05-04  jrandom     * Short circuit a highly congested part of the stat logging unless its       required (may or may not help with a synchronization issue reported by       andreas)
Monotone-Parent: 0cba6aae5ab5ad744a06149b38df33cc7962ad39
Monotone-Revision: c8e9f58a0d8845fe00e05f66999f2a87bbad8760

Monotone-Author: jrandom
Monotone-Date: 2006-05-04T23:08:48
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,9 @@
-$Id: history.txt,v 1.467 2006/05/02 23:30:28 complication Exp $
+$Id: history.txt,v 1.468 2006/05/03 06:13:29 complication Exp $
+
+2006-05-04  jrandom
+    * Short circuit a highly congested part of the stat logging unless its
+      required (may or may not help with a synchronization issue reported by
+      andreas)
 
 2006-05-03  Complication
     * Allow a single build attempt to proceed despite 1-minute overload
