--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,8 @@
-$Id: history.txt,v 1.468 2006/05/03 06:13:29 complication Exp $
+$Id: history.txt,v 1.469 2006/05/04 18:09:17 jrandom Exp $
+
+2006-05-06  jrandom
+    * Readjust the tunnel creation timeouts to reject less but fail earlier,
+      while tracking the extended timeout events.
 
 2006-05-04  jrandom
     * Short circuit a highly congested part of the stat logging unless its
