2006-05-07  Complication     * Fix problem whereby repeated calls to allowed() would make       the 1-tunnel exception permit more than one concurrent build
Monotone-Parent: 25d80e0a04c577db867c2fcf3e2d9bc236176d6b
Monotone-Revision: 16894fde53c978a45e0c362177bf3e723dd14921

Monotone-Author: complication
Monotone-Date: 2006-05-08T03:19:46
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,8 @@
-$Id: history.txt,v 1.469 2006/05/04 18:09:17 jrandom Exp $
+$Id: history.txt,v 1.470 2006/05/06 15:27:35 jrandom Exp $
+
+2006-05-07  Complication
+    * Fix problem whereby repeated calls to allowed() would make
+      the 1-tunnel exception permit more than one concurrent build
 
 2006-05-06  jrandom
     * Readjust the tunnel creation timeouts to reject less but fail earlier,
