* 2006-05-09  0.6.1.18 released 2006-05-09  jrandom     * Further tunnel creation timeout revamp
Monotone-Parent: 16894fde53c978a45e0c362177bf3e723dd14921
Monotone-Revision: 1025f56480d23403c0dc5984bd873c24c5410d08

Monotone-Author: jrandom
Monotone-Date: 2006-05-09T21:17:17
Monotone-Branch: i2p.i2p
Monotone-Tag: i2p_0_6_1_18

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,9 @@
-$Id: history.txt,v 1.470 2006/05/06 15:27:35 jrandom Exp $
+$Id: history.txt,v 1.471 2006/05/07 22:19:46 complication Exp $
+
+* 2006-05-09  0.6.1.18 released
+
+2006-05-09  jrandom
+    * Further tunnel creation timeout revamp
 
 2006-05-07  Complication
     * Fix problem whereby repeated calls to allowed() would make
