2006-05-11  jrandom     * PRNG bugfix (thanks cervantes and Complication!)
Monotone-Parent: 68e5c5b71a733b2fbe4aae08980d6b301504c6f4
Monotone-Revision: 0264e010646860c15e1017ab4cbdcf9fbd48748d

Monotone-Author: jrandom
Monotone-Date: 2006-05-12T03:31:44
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,7 @@
-$Id: history.txt,v 1.471 2006/05/07 22:19:46 complication Exp $
+$Id: history.txt,v 1.472 2006/05/09 16:17:17 jrandom Exp $
+
+2006-05-11  jrandom
+    * PRNG bugfix (thanks cervantes and Complication!)
 
 * 2006-05-09  0.6.1.18 released
 
