2006-05-15  jrandom     * Add a load dependent throttle on the pending inbound tunnel request       backlog     * Increased the tunnel test failure slack before killing a tunnel
Monotone-Parent: 8bf14b525cd85ff02dea7087df72e858daa0b6d2
Monotone-Revision: ffffa3da85fa276d8b31e3a685af0509577b0749

Monotone-Author: jrandom
Monotone-Date: 2006-05-15T17:33:02
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,9 @@
-$Id: history.txt,v 1.473 2006/05/11 22:31:44 jrandom Exp $
+$Id: history.txt,v 1.474 2006/05/13 23:52:44 complication Exp $
+
+2006-05-15  jrandom
+    * Add a load dependent throttle on the pending inbound tunnel request
+      backlog
+    * Increased the tunnel test failure slack before killing a tunnel
 
 2006-05-13  Complication
     * Separate growth factors for tunnel count and tunnel test time
