2006-05-16  jrandom     * Further shitlist randomizations     * Adjust the stats monitored for detecting cpu overload when dropping new       tunnel requests
Monotone-Parent: ffffa3da85fa276d8b31e3a685af0509577b0749
Monotone-Revision: 8a013d609a63476c6773e93cd9d5da938f733da2

Monotone-Author: jrandom
Monotone-Date: 2006-05-16T18:34:08
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,9 @@
-$Id: history.txt,v 1.474 2006/05/13 23:52:44 complication Exp $
+$Id: history.txt,v 1.475 2006/05/15 12:33:02 jrandom Exp $
+
+2006-05-16  jrandom
+    * Further shitlist randomizations
+    * Adjust the stats monitored for detecting cpu overload when dropping new
+      tunnel requests
 
 2006-05-15  jrandom
     * Add a load dependent throttle on the pending inbound tunnel request
