--- a/history.txt
+++ b/history.txt
@@ -1,5 +1,11 @@
 $Id: history.txt,v 1.479 2006-05-18 17:31:08 jrandom Exp $
 
+* 2006-06-04  0.6.1.20 released
+
+2006-06-04  jrandom
+    * Reduce the SSU ack frequency
+    * Tweaked the tunnel rejection settings to reject less aggressively
+
 2006-05-31  jrandom
     * Only send netDb searches to the floodfill peers for the time being
     * Add some proof of concept filters for tunnel participation.  By default,
