2008-01-29 zzz     * Addressbook: Change default subscription     * ConfigUpdateHandler: Change default news URL     * initialNews.xml: Update version to .31     * news.xml: More updates     * hosts.txt: Add i2p-projekt.i2p     * readme.html: More URL updates     * SusiDNS: Change references to default subscription
Monotone-Parent: 203b8ba490c806ae639f9fb9de8e4056fe06e5cf
Monotone-Revision: cd134e9877bee2c6c45627cfd0d162af9fa3c078

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2008-01-29T22:20:04
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,13 @@
 
+2008-01-29 zzz
+    * Addressbook: Change default subscription
+    * ConfigUpdateHandler: Change default news URL
+    * initialNews.xml: Update version to .31
+    * news.xml: More updates
+    * hosts.txt: Add i2p-projekt.i2p
+    * readme.html: More URL updates
+    * SusiDNS: Change references to default subscription
+
 2008-01-28 zzz
     * news.xml: Updates, still preliminary
     * ReseedHandler: Change default URL
