* NewsFetcher: Change fetch failed from error to warning     * installer: Fix URL and "email"     * checklist.txt: New release checklist
Monotone-Parent: cd134e9877bee2c6c45627cfd0d162af9fa3c078
Monotone-Revision: d2e72251e70cf4e50f46ccf422c838fbd38106eb

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2008-01-31T19:56:00
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,9 @@
 
+2008-01-31 zzz
+    * NewsFetcher: Change fetch failed from error to warning
+    * installer: Fix URL and "email"
+    * checklist.txt: New release checklist
+
 2008-01-29 zzz
     * Addressbook: Change default subscription
     * ConfigUpdateHandler: Change default news URL
