2008-02-04 Complication     * Added my release signing key into TrustedUpdate.java
Monotone-Parent: d2e72251e70cf4e50f46ccf422c838fbd38106eb
Monotone-Revision: 4183a98f435073e0c29608c2539fbd157ff289a5

Monotone-Author: complication@mail.i2p
Monotone-Date: 2008-02-04T21:34:52
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,7 @@
 
+2008-02-04 Complication
+    * Added my release signing key into TrustedUpdate.java
+
 2008-01-31 zzz
     * NewsFetcher: Change fetch failed from error to warning
     * installer: Fix URL and "email"
