2008-02-04 Complication     * Also use the new key for checking, and add it into news.xml
Monotone-Parent: 4183a98f435073e0c29608c2539fbd157ff289a5
Monotone-Revision: d9f95948a845f816fb31961d7e115ad2864b1e21

Monotone-Author: complication@mail.i2p
Monotone-Date: 2008-02-04T23:20:28
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,5 @@
+2008-02-04 Complication
+    * Also use the new key for checking, and add it into news.xml
 
 2008-02-04 Complication
     * Added my release signing key into TrustedUpdate.java
