2008-02-05 Complication     * Change the dates too (sorry for such forgetfulness!)
Monotone-Parent: d9f95948a845f816fb31961d7e115ad2864b1e21
Monotone-Revision: 921f5765850ff0bdd8eddefa0bbb9456aa6515bc

Monotone-Author: complication@mail.i2p
Monotone-Date: 2008-02-04T23:52:11
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,6 @@
+2008-02-05 Complication
+    * Change the dates too (sorry for such forgetfulness!)
+
 2008-02-04 Complication
     * Also use the new key for checking, and add it into news.xml
 
