* build.xml: Add some apps to javadoc     * checklist.txt: Add some things     * news.xml: Minor edit     * runplain.sh: Add some comments
Monotone-Parent: e4173490647018345d50527362f0a1331b0507c2
Monotone-Revision: cdaa50ea36f9f154bb79868667460040d831730e

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2008-02-06T16:38:23
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,10 @@
+2008-02-06 zzz
+    * build.xml: Add some apps to javadoc
+    * checklist.txt: Add some things
+    * news.xml: make links relative
+    * runplain.sh: Add some comments
+    * wrapper.config: Add some comments
+
 2008-02-05 Complication
     * Change the dates too (sorry for such forgetfulness!)
 
