* Add new tunnel build algorithm (preliminary)     * Change NTCP backlogged message from error to warning     * Checklist updates
Monotone-Parent: 89a56043deac00fb1e5f3f5a6a837c47caa807c7
Monotone-Revision: e20c0075f57440edcebaac0009a0ef0327d563cc

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2008-02-10T18:29:21
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,8 @@
+2008-02-10 zzz
+    * Add new tunnel build algorithm (preliminary)
+    * Change NTCP backlogged message from error to warning
+    * Checklist updates
+
 * 2008-02-10  0.6.1.31 released
 
 2008-02-10 Complication
