* Make graphs clickable to get larger graphs     * Change SimpleTimer CRIT to a WARN, increase threshold     * Checklist update
Monotone-Parent: e20c0075f57440edcebaac0009a0ef0327d563cc
Monotone-Revision: 4fdd194cb71f4bb9e8bf6793580f9c5277fa3f31

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2008-02-13T11:49:24
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,8 @@
+2008-02-13 zzz
+    * Make graphs clickable to get larger graphs
+    * Change SimpleTimer CRIT to a WARN, increase threshold
+    * Checklist update
+
 2008-02-10 zzz
     * Add new tunnel build algorithm (preliminary)
     * Change NTCP backlogged message from error to warning
