* PersistentDataStore: Write out 300 records every 10 min       rather than 1 every 10 sec;       Don't store leasesets to disk or read them in     * Combine rates for pools with the same length setting       in the new tunnel build algorithm     * Clarify a log message in the UpdateHandler
Monotone-Parent: 4fdd194cb71f4bb9e8bf6793580f9c5277fa3f31
Monotone-Revision: 623b376b63ad59355563ef5d1058a96c83d447ed

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2008-02-13T21:42:09
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,11 @@
+2008-02-17 zzz
+    * PersistentDataStore: Write out 300 records every 10 min
+      rather than 1 every 10 sec;
+      Don't store leasesets to disk or read them in
+    * Combine rates for pools with the same length setting
+      in the new tunnel build algorithm
+    * Clarify a log message in the UpdateHandler
+
 2008-02-13 zzz
     * Make graphs clickable to get larger graphs
     * Change SimpleTimer CRIT to a WARN, increase threshold
