* Fix race in TunnelDispatcher which caused       participating tunnel count to seesaw -       should increase network capacity     * Leave participating tunnels in 10s batches for efficiency     * Update participating tunnel ratestat when leaving a tunnel too,       to generate a smoother graph     * Fix tunnel.participatingMessageCount stat to include all       participating tunnels, not just outbound endpoints     * Simplify Expire Tunnel job name
Monotone-Parent: 623b376b63ad59355563ef5d1058a96c83d447ed
Monotone-Revision: dc2fa2d01da4c7b3733d4dadb85d757d592c1fa6

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2008-02-16T16:25:21
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,15 @@
-2008-02-17 zzz
+2008-02-16 zzz
+    * Fix race in TunnelDispatcher which caused
+      participating tunnel count to seesaw -
+      should increase network capacity
+    * Leave participating tunnels in 10s batches for efficiency
+    * Update participating tunnel ratestat when leaving a tunnel too,
+      to generate a smoother graph
+    * Fix tunnel.participatingMessageCount stat to include all
+      participating tunnels, not just outbound endpoints
+    * Simplify Expire Tunnel job name
+
+2008-02-13 zzz
     * PersistentDataStore: Write out 300 records every 10 min
       rather than 1 every 10 sec;
       Don't store leasesets to disk or read them in
