--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,7 @@
+2008-02-21 zzz
+    * Raise inbound default bandwidth to 32KBps
+    * Fix config.jsp that showed 0KBps share bandwidth by default
+
 2008-02-19 zzz
     * Addressbook: Disallow '--' in host names except in IDN,
       add some reserved host names
