* Reintroduce NTCP backlog pushback, with switch back to       previous tunnel when no longer backlogged     * Catch an nio exception in an NTCP logging statement if loglevel is WARN     * IRC Proxy: terminate all messages with \r\n (thanks TrivialPursuit!)
Monotone-Parent: 0acdd430310e8a7e494cbe96896c33ba04a35af1
Monotone-Revision: a80e766332e2195306175da5d07faae83cabcd07

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2008-02-26T19:33:11
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,9 @@
+2008-02-26 zzz
+    * Reintroduce NTCP backlog pushback, with switch back to
+      previous tunnel when no longer backlogged
+    * Catch an nio exception in an NTCP logging statement if loglevel is WARN
+    * IRC Proxy: terminate all messages with \r\n (thanks TrivialPursuit!)
+
 2008-02-21 zzz
     * Raise inbound default bandwidth to 32KBps
     * Fix config.jsp that showed 0KBps share bandwidth by default
