* i2ptunnel: Add 3-hop option to edit.jsp to match configtunnels.jsp     * i2psnark: Remove orion and gaytorrents from default tracker list     * Remove orion from jump list and from eepsite_index.html     * Jbigi: Change jbigi version to 4.2.2 in build scripts - tested by amiga     * Capitalize OutboundMessageDistributor job name     * TunnelPool: Add a warning if all tunnels are backlogged
Monotone-Parent: a80e766332e2195306175da5d07faae83cabcd07
Monotone-Revision: 18c13eee594c77b137b467061c029722a14c4735

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2008-02-27T15:18:32
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,11 @@
+2008-02-27 zzz
+    * i2ptunnel: Add 3-hop option to edit.jsp to match configtunnels.jsp
+    * i2psnark: Remove orion and gaytorrents from default tracker list
+    * Remove orion from jump list and from eepsite_index.html
+    * Jbigi: Change jbigi version to 4.2.2 in build scripts - tested by amiga
+    * Capitalize OutboundMessageDistributor job name
+    * TunnelPool: Add a warning if all tunnels are backlogged
+
 2008-02-26 zzz
     * Reintroduce NTCP backlog pushback, with switch back to
       previous tunnel when no longer backlogged
