Fix netdb.knownLeaseSets count reported by floodfill routers
Monotone-Parent: 3f95d176187651335289a29fd938a831fbd4616f
Monotone-Revision: 7801a8d4af16682ccc1a46b03e5b3a7f35e5f0cf

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2008-03-01T16:13:41
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,7 @@
+2008-03-01 zzz
+    * Fix netdb.knownLeaseSets count reported by floodfill routers
+      (was broken by -3)
+
 2008-02-27 zzz
     * i2ptunnel: Add 3-hop option to edit.jsp to match configtunnels.jsp
     * i2psnark: Remove orion and gaytorrents from default tracker list
