* Stats: Add code to disable most stats to save memory.       Set on configstats.jsp or set stat.full=false to disable the stats.       (true by default for now)
Monotone-Parent: 3f5c1a1e9a845fe495166dd6d9828c124c101678
Monotone-Revision: 10879a9f091f24959a71d03160242443f5436b9d

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2008-03-05T18:44:45

--- a/history.txt
+++ b/history.txt
@@ -7,6 +7,9 @@
       for configuration instructions
     * i2psnark: Don't do a naming lookup for Base64 destkeys
     * i2psnark: Add a StartAll button
+    * Stats: Add code to disable most stats to save memory.
+      Set on configstats.jsp or set stat.full=false to disable the stats.
+      (true by default for now)
 
 2008-03-01 zzz
     * Fix netdb.knownLeaseSets count reported by floodfill routers
