update news and version numbers to .32
Monotone-Parent: 7801a8d4af16682ccc1a46b03e5b3a7f35e5f0cf
Monotone-Revision: c0f0eba767ae48099c71dcd0cca28b24869f76e8

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2008-03-07T15:08:26
Monotone-Branch: i2p.i2p
Monotone-Tag: i2p-0.6.1.32

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,8 @@
+* 2008-03-09  0.6.1.32 released
+
+2008-03-07 zzz
+    * Update news and version numbers
+
 2008-03-01 zzz
     * Fix netdb.knownLeaseSets count reported by floodfill routers
       (was broken by -3)
