* ClientPeerSelector: Implement strict ordering of peers,       based on XOR distance from a random hash       separately generated for each tunnel pool
Monotone-Parent: 0c4c4347a8f451bf4d8950473c20c728eb9754b5
Monotone-Revision: adbe93ae091c4ca78306ef94968a0c1d788e2c01

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2008-03-07T23:24:49

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,8 @@
+2008-03-08 zzz
+    * ClientPeerSelector: Implement strict ordering of peers,
+      based on XOR distance from a random hash
+      separately generated for each tunnel pool
+
 2008-03-07 zzz
     * Naming: Optimize lookups for a destkey
     * ProfileOrganizer, TunnelPoolSettings, ClientPeerSelector:
