2008-03-09 Complication     * Give the Jetty build file ability to ask permission       before downloading the Jetty archive from the web,       and to verify its SHA1 + MD5 hashes. Adjust the main build file       in accordance with this change.     * Improve the release checklist.
Monotone-Parent: c0f0eba767ae48099c71dcd0cca28b24869f76e8
Monotone-Revision: f541ec6c1ca7ffae49e31ee75559695d64152fa1

Monotone-Author: complication@mail.i2p
Monotone-Date: 2008-03-08T20:37:45
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,10 @@
+2008-03-09 Complication
+    * Give the Jetty build file ability to ask permission
+      before downloading the Jetty archive from the web,
+      and to verify its SHA1 + MD5 hashes. Adjust the main build file
+      in accordance with this change.
+    * Improve the release checklist.
+
 * 2008-03-09  0.6.1.32 released
 
 2008-03-07 zzz
