* EepGet: Fix byte count for bytesTransferred status listeners       (fixes command line status)     * UpdateHandler:        - Fix byte count display        - Display final status on router console        - Don't allow multiple update jobs to queue up        - Increase max retries        - Code cleanup        - Don't show 'check for update' button when update in progress        - Enhance error messages
Monotone-Parent: d67166ab9b5b9caa521378af2fcf1940abd6a27b
Monotone-Revision: 66bc0a84720d74d20398b8a1f329066277a090e1

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2008-03-10T16:27:40
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,16 @@
+2008-03-10 zzz
+    * EepGet: Fix byte count for bytesTransferred status listeners
+      (fixes command line status)
+    * UpdateHandler:
+       - Fix byte count display
+       - Display final status on router console
+       - Don't allow multiple update jobs to queue up
+       - Increase max retries
+       - Code cleanup
+       - Don't show 'check for update' button when update in progress
+       - Enhance error messages
+    * NetDb: Comment out published netDb stats disabled for .32
+
 2008-03-08 zzz
     * ClientPeerSelector: Implement strict ordering of peers,
       based on XOR distance from a random hash
