* Floodfill Search:        - Fix a bug that caused a single FloodfillOnlySearchJob          instance to be run multiple times, with unpredictable          results        - Select ff peers randomly to improve reliability        - Add some bulletproofing
Monotone-Parent: d09251209b30c84f47172fc0650759da6203d7d3
Monotone-Revision: bae033ff7b51980e1d7de6ca2c8fc48864289f74

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2008-03-13T20:23:46
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,11 @@
+2008-03-14 zzz
+    * Floodfill Search:
+       - Fix a bug that caused a single FloodfillOnlySearchJob
+         instance to be run multiple times, with unpredictable
+         results
+       - Select ff peers randomly to improve reliability
+       - Add some bulletproofing
+
 2008-03-11 zzz
     * ProfileOrganizer:
        - Don't require a peer to be high-capacity to be
