* ProfileOrganizer:        - Use more recent stats to calculate integrationory.txt        - Show that fast peers are also high-capacity on profiles.jsp     * readme.html: Update Syndie link     * TunnelPool: Update comments     * netDb: Report 1-2h uptime as 90m to further frustrate tracking,       get rid of the 60s tunnel stats       (effective as of .33 to provide cover)
Monotone-Parent: bae033ff7b51980e1d7de6ca2c8fc48864289f74
Monotone-Revision: 4861a6d220f52527f3616aa8f85165eb72fb54cf

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2008-03-13T23:13:32
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,14 @@
 2008-03-14 zzz
+    * ProfileOrganizer:
+       - Use more recent stats to calculate integrationory.txt
+       - Show that fast peers are also high-capacity on profiles.jsp
+    * readme.html: Update Syndie link
+    * TunnelPool: Update comments
+    * netDb: Report 1-2h uptime as 90m to further frustrate tracking,
+      get rid of the 60s tunnel stats
+      (effective as of .33 to provide cover)
+
+2008-03-13 zzz
     * Floodfill Search:
        - Fix a bug that caused a single FloodfillOnlySearchJob
          instance to be run multiple times, with unpredictable
