Floodfill Search: Prefer heard-from, unfailing, unshitlisted floodfill peers
Monotone-Parent: 4861a6d220f52527f3616aa8f85165eb72fb54cf
Monotone-Revision: fca0b0cb7a392dfcfe481aaaa20b06690a447e06

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2008-03-14T22:53:18
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,6 +1,10 @@
 2008-03-14 zzz
+    * Floodfill Search:
+       - Prefer heard-from, unfailing, unshitlisted floodfill peers
+
+2008-03-14 zzz
     * ProfileOrganizer:
-       - Use more recent stats to calculate integrationory.txt
+       - Use more recent stats to calculate integration
        - Show that fast peers are also high-capacity on profiles.jsp
     * readme.html: Update Syndie link
     * TunnelPool: Update comments
