* NewsFetcher: Fix bug causing fetch every 10m
Monotone-Parent: 5a10a952915352111b9da58bb3354f3871655b5e
Monotone-Revision: f09588ea81048f32dc173596029a90bc6ecc2618

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2008-03-22T17:10:49
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,7 @@
 2008-03-22 zzz
+    * NewsFetcher: Fix bug causing fetch every 10m
+
+2008-03-22 zzz
     * Tunnel Testing:
       - Fix counting so it really takes 4 consecutive failures
         rather than 4 total to remove a tunnel
