--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,12 @@
+2008-03-25 zzz
+    * i2psnark:
+      - Add support for secondary open trackers
+      - Refactor and simplify the TrackerClient code
+      - Add welterde's tracker to the default list
+      - Don't have eepget retry announces
+      - Slow down tracker contacts if they've failed for a while
+      - Add some debug support showing connections (?p=2)
+
 2008-03-22 zzz
     * NewsFetcher: Fix bug causing fetch every 10m
 
