* ReseedHandler: Support multiple urls,       add netdb.i2p2.de as a 2nd default
Monotone-Parent: 6bea3e736b034b99ffe4da98137b47d14b13c80b
Monotone-Revision: 40fe20a9de8671c0808f9f86d160b5578a28757c

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2008-03-26T20:15:47
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,7 @@
+2008-03-26 zzz
+    * ReseedHandler: Support multiple urls,
+      add netdb.i2p2.de as a 2nd default
+
 2008-03-25 zzz
     * i2psnark:
       - Add support for secondary open trackers
