* Send messages for the same destination to the same inbound       lease to reduce out-of-order delivery.     * ExploratoryPeerSelector: Back out the floodfill peer exclusion       for now, as it prevents speed rating of those peers
Monotone-Parent: 40fe20a9de8671c0808f9f86d160b5578a28757c
Monotone-Revision: f8ce4e63ce4df145ca8638596213c2ea5f0ee608

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2008-03-27T13:03:16
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,9 @@
+2008-03-27 zzz
+    * Send messages for the same destination to the same inbound
+      lease to reduce out-of-order delivery.
+    * ExploratoryPeerSelector: Back out the floodfill peer exclusion
+      for now, as it prevents speed rating of those peers
+
 2008-03-26 zzz
     * ReseedHandler: Support multiple urls,
       add netdb.i2p2.de as a 2nd default
